fixed the formatting error
when loading the website on google chrome or duckduckgo, the formatting was all messed up. so fixed it and it looks good on my end.

--- a/Hypernova/Hypernova.css
+++ b/Hypernova/Hypernova.css
@@ -65,3 +65,8 @@ li {
 	color: var(--font-color);
 	text-align: center;
 }
+
+#titlep {
+	display: block;
+	margin-top: 4em;
+}
