--- a/Introduction/Introduction_style.css
+++ b/Introduction/Introduction_style.css
@@ -29,3 +29,13 @@ h1 {
 	display: block;
 	margin-bottom: 6em;
 }
+
+#titlep {
+	display: block;
+	margin-top: 4em;
+}
+
+#headerR {
+	float: right;
+
+}
