--- a/index_style.css
+++ b/index_style.css
@@ -40,3 +40,13 @@ h1 {
 	color: var(--font-color);
 	text-align: center;
 }
+
+#titlep {
+	display: block;
+	margin-top: 4em;
+}
+
+#headerR {
+	float: right;
+
+}
